@@ -41,6 +41,7 @@ Improvements :
 * MatrixMultiplyOp no longer has a mode parameter, and instead uses geometric interpretation to transform the input data appropriately.
 * TransformOp now takes a single list of primitive variables to modify, and uses geometric interpretation to transform them appropriately. For backwards compatibility with old files, if P and N are Numeric, they will be converted to the appropriate interpretation and a warning will be issued.
 * IECoreMaya FromMayaShapeConverters correctly set the geometric interpretation of points, normals, and velocities.
+* IECoreHoudini To/FromHoudini converters correctly set the geometric interpretation of points, normals, and velocities.
 * Shader::parametersData() now returns a raw pointer, and provides a const version.
 
 Bug Fixes :
